// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppFiltersCollection should match a snapshot for mobile desktop 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <div
        class="app-filter-col"
      >
        <div
          class="el-flex-column el-flex-container"
        >
          <span
            class="el-mb5 el-icon"
            style="font-size: 5em;"
          >
            <svg />
          </span>
          <div
            class="el-flex-column el-flex-justify-center el-flex-container"
          >
            <h2
              class="app-filter-subtitle el-subtitle"
            >
              Reapit Developed Apps
            </h2>
            <p
              class="app-filter-strapline el-body-text"
            >
              Lorem ipsum dolor sit amet, consectetur adip
            </p>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <div
      class="app-filter-col"
    >
      <div
        class="el-flex-column el-flex-container"
      >
        <span
          class="el-mb5 el-icon"
          style="font-size: 5em;"
        >
          <svg />
        </span>
        <div
          class="el-flex-column el-flex-justify-center el-flex-container"
        >
          <h2
            class="app-filter-subtitle el-subtitle"
          >
            Reapit Developed Apps
          </h2>
          <p
            class="app-filter-strapline el-body-text"
          >
            Lorem ipsum dolor sit amet, consectetur adip
          </p>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppFiltersCollection should match a snapshot for mobile mobile 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <div
        class="app-filter-col"
      >
        <div
          class="el-flex-column el-flex-container"
        >
          <span
            class="el-mb5 el-icon"
            style="font-size: 3.75em;"
          >
            <svg />
          </span>
          <div
            class="el-flex-column el-flex-justify-center el-flex-container"
          >
            <h2
              class="app-filter-subtitle el-subtitle"
            >
              Reapit Developed Apps
            </h2>
            <p
              class="app-filter-strapline el-body-text"
            >
              Lorem ipsum dolor sit amet, consectetur adip
            </p>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <div
      class="app-filter-col"
    >
      <div
        class="el-flex-column el-flex-container"
      >
        <span
          class="el-mb5 el-icon"
          style="font-size: 3.75em;"
        >
          <svg />
        </span>
        <div
          class="el-flex-column el-flex-justify-center el-flex-container"
        >
          <h2
            class="app-filter-subtitle el-subtitle"
          >
            Reapit Developed Apps
          </h2>
          <p
            class="app-filter-strapline el-body-text"
          >
            Lorem ipsum dolor sit amet, consectetur adip
          </p>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppFiltersCollection should match a snapshot for mobile superWidescreen 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <div
        class="app-filter-col"
      >
        <div
          class="el-flex-column el-flex-container"
        >
          <span
            class="el-mb5 el-icon"
            style="font-size: 5em;"
          >
            <svg />
          </span>
          <div
            class="el-flex-column el-flex-justify-center el-flex-container"
          >
            <h2
              class="app-filter-subtitle el-subtitle"
            >
              Reapit Developed Apps
            </h2>
            <p
              class="app-filter-strapline el-body-text"
            >
              Lorem ipsum dolor sit amet, consectetur adip
            </p>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <div
      class="app-filter-col"
    >
      <div
        class="el-flex-column el-flex-container"
      >
        <span
          class="el-mb5 el-icon"
          style="font-size: 5em;"
        >
          <svg />
        </span>
        <div
          class="el-flex-column el-flex-justify-center el-flex-container"
        >
          <h2
            class="app-filter-subtitle el-subtitle"
          >
            Reapit Developed Apps
          </h2>
          <p
            class="app-filter-strapline el-body-text"
          >
            Lorem ipsum dolor sit amet, consectetur adip
          </p>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppFiltersCollection should match a snapshot for mobile tablet 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <div
        class="app-filter-col"
      >
        <div
          class="el-flex-column el-flex-container"
        >
          <span
            class="el-mb5 el-icon"
            style="font-size: 5em;"
          >
            <svg />
          </span>
          <div
            class="el-flex-column el-flex-justify-center el-flex-container"
          >
            <h2
              class="app-filter-subtitle el-subtitle"
            >
              Reapit Developed Apps
            </h2>
            <p
              class="app-filter-strapline el-body-text"
            >
              Lorem ipsum dolor sit amet, consectetur adip
            </p>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <div
      class="app-filter-col"
    >
      <div
        class="el-flex-column el-flex-container"
      >
        <span
          class="el-mb5 el-icon"
          style="font-size: 5em;"
        >
          <svg />
        </span>
        <div
          class="el-flex-column el-flex-justify-center el-flex-container"
        >
          <h2
            class="app-filter-subtitle el-subtitle"
          >
            Reapit Developed Apps
          </h2>
          <p
            class="app-filter-strapline el-body-text"
          >
            Lorem ipsum dolor sit amet, consectetur adip
          </p>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppFiltersCollection should match a snapshot for mobile widescreen 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <div
        class="app-filter-col"
      >
        <div
          class="el-flex-column el-flex-container"
        >
          <span
            class="el-mb5 el-icon"
            style="font-size: 5em;"
          >
            <svg />
          </span>
          <div
            class="el-flex-column el-flex-justify-center el-flex-container"
          >
            <h2
              class="app-filter-subtitle el-subtitle"
            >
              Reapit Developed Apps
            </h2>
            <p
              class="app-filter-strapline el-body-text"
            >
              Lorem ipsum dolor sit amet, consectetur adip
            </p>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <div
      class="app-filter-col"
    >
      <div
        class="el-flex-column el-flex-container"
      >
        <span
          class="el-mb5 el-icon"
          style="font-size: 5em;"
        >
          <svg />
        </span>
        <div
          class="el-flex-column el-flex-justify-center el-flex-container"
        >
          <h2
            class="app-filter-subtitle el-subtitle"
          >
            Reapit Developed Apps
          </h2>
          <p
            class="app-filter-strapline el-body-text"
          >
            Lorem ipsum dolor sit amet, consectetur adip
          </p>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
